Revert "21: Fix misaligned Library tab button in navbar"
This reverts commit d066fed8ad0960c5006ac11f34146e1e94acdae5.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -150,14 +150,6 @@ ol.book-list li form {
   cursor: pointer;
   padding: 0;
   display: inline-block;
-  vertical-align: baseline;
-}
-
-.navbar form {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  vertical-align: baseline;
 }
 
 .navbar-link-button::after {
